# duckdb-jfr-extension

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  build-extension.sh  build.rs  download-duckdb-lib.sh  download-duckdb-sources.sh  extension_config.cmake  index.html  publish-jdbc.sh
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: main.js  search.js
docs/classes/: index.AsyncDuckDB.html  index.AsyncDuckDBConnection.html  index.AsyncDuckDBDispatcher.html  index.AsyncPreparedStatement.html  index.AsyncResultStreamIterator.html  index.ConsoleLogger.html  index.DuckDBBindingsBase.html  index.DuckDBConnection.html  index.FileStatistics.html  index.PreparedStatement.html  index.ResultStreamIterator.html  index.VoidLogger.html  index.WorkerTask.html
docs/enums/: index.DuckDBAccessMode.html  index.DuckDBDataProtocol.html  index.DuckDBFeature.html  index.FileFlags.html  index.JSONTableShape.html  index.LogEvent.html  index.LogLevel.html  index.LogOrigin.html  index.LogTopic.html  index.StatusCode.html  index.TokenType.html  index.WorkerRequestType.html  index.WorkerResponseType.html
docs/functions/: index.callSRet.html  index.copyBuffer.html  index.createWorker.html  index.decodeText.html  index.dropResponseBuffers.html  index.failWith.html  index.getJsDelivrBundles.html  index.getLogEventLabel.html  index.getLogLevelLabel.html  index.getLogOriginLabel.html  index.getLogTopicLabel.html  index.getPlatformFeatures.html  index.isFirefox.html  index.isNode.html  index.isSafari.html  index.readString.html  index.selectBundle.html  targets_duckdb_browser_blocking.createDuckDB.html  targets_duckdb_node_blocking.createDuckDB.html
docs/interfaces/: index.ArrowInsertOptions.html  index.AsyncDuckDBBindings.html  index.CSVInsertOptions.html  index.DuckDBBindings.html  index.DuckDBBundle.html  index.DuckDBBundles.html  index.DuckDBConfig.html  index.DuckDBFileInfo.html  index.DuckDBFilesystemConfig.html  index.DuckDBGlobalFileInfo.html  index.DuckDBModule.html  index.DuckDBQueryConfig.html  index.DuckDBRuntime.html  index.FileBlockStatistics.html  index.InstantiationProgress.html  index.JSONInsertOptions.html  index.Logger.html  index.PThread.html  index.PlatformFeatures.html  index.S3Config.html  index.ScriptTokens.html
docs/modules/: index.html  targets_duckdb.html  targets_duckdb_browser_blocking.html  targets_duckdb_node_blocking.html
docs/types/: index.ConnectionID.html  index.LogEntry.html  (+9 more)
jdbc/: build.gradle.kts  settings.gradle.kts
src/: bridge.cpp  bridge.hpp  bridge_scalar_function.cpp  bridge_table_function.cpp  jfr_attach.rs  jfr_scan.rs  jfr_schema.rs  lib.rs  schema.rs  stacktrace_matches.rs  wrapper.cpp  wrapper.hpp
wasm/: CMakeLists.txt
(+33 files in other folders)
